--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   google_fonts: ^6.3.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  bloc: ^9.0.0
+  flutter_bloc: ^9.1.1
 
 dev_dependencies:
   hive_generator: ^2.0.1
